# mol-interpretability

./: .gitignore  README.md  pyproject.toml  requirements.txt
chemxai_faithfulness/: cli.py  metrics.py
data/: tox21_multitask.csv  tox21_train.csv
llm_mol_interp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_mol_interp/baselines/: ecfp.py
llm_mol_interp/cli/: ask.py  baseline_ecfp.py  ensemble_eval.py  eval_counterfactuals.py  eval_per_task_auc.py  explain.py  explain_testset.py  train_baseline_ecfp.py  train_dmpnn.py
llm_mol_interp/models/: dmpnn.py  readout.py
llm_mol_interp/runtime/: make_importances_from_masking.py  predictor.py
llm_mol_interp/utils/: calibrate_threshold.py  dataset.py  featurizer.py  featurizer_infer.py  metrics.py  rdkit_logs.py  score_with_threshold.py  splits.py  verdict_report.py
llm_mol_interp/xai/: alerts_lib.py  attribution.py  kb.yaml  rag_explainer.py  substructures.py  visualize.py
notebooks/: Compounds_exploration.ipynb  Exploratory_Tox21_data.ipynb  Prediction_Eval.ipynb  Tox21_retrieve.ipynb
notebooks/.ipynb_checkpoints/: Compounds_exploration-checkpoint.ipynb  Exploratory_Tox21_data-checkpoint.ipynb  Prediction_Eval-checkpoint.ipynb
notebooks/Images/: faithfulness_by_assay.csv  faithfulness_overall.csv
notebooks/data/: explanations.jsonl  explanations_verdicts64.json  explanations_verdicts_128.json  explanations_verdicts_32.json  faithfulness_NR-AR.json
